fix: dark mode support

--- a/src/index.scss
+++ b/src/index.scss
@@ -79,3 +79,7 @@
         resize: none;
     }
 }
+
+html[data-theme-mode="dark"] img[data-src^="assets/tikz-"][data-src$=".svg"] {
+    filter: invert(0.8) brightness(1.2);
+}
